# TextParser

./: .gitignore  CMakeLists.txt
src/: TextParser.cpp  TextParser.h  main.cpp
